// Vitest Snapshot v1

exports[`recommended rules > has the right list 1`] = `
[
  "decorator-position",
]
`;

exports[`recommended rules has the right list 1`] = `
Array [
  "decorator-position",
]
`;
